# ULTRASAT-utils

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ultrasatutils/: __init__.py  utils.py
src/ultrasatutils/data/: ultrasat_bandpass_center.csv  ultrasat_snr_G_5deg.csv
